# Programozas_II_Szorgalmi_feladat_Vonatok

./: .gitignore  CMakeLists.txt  Programozas_II_Szorgalmi_1_Vonat.sln  Programozas_II_Szorgalmi_1_Vonat.vcxproj  Programozas_II_Szorgalmi_1_Vonat.vcxproj.filters  README.md  intercity.cpp  intercity.h  intercity_train_data.lst  intercity_vonat_adatok.lst  main.cpp  passanger_train_data.lst  passangertrain.cpp  passangertrain.h  regular_train_data.lst  string_helper_functions.cpp  string_helper_functions.h  szemelyvonat_adatok.lst  train.cpp  train.h  trainstation.cpp  trainstation.h  vonat_adatok.lst
include/: intercity.h  passenger_train.h  string_helper_functions.h  train.h  trainstation.h
src/: impl.cpp  intercity.cpp  main.cpp  passenger_train.cpp  string_helper_functions.cpp  train.cpp  trainstation.cpp
